objects/Consultant__c.object
<CustomObject>
    <fields>
        <fullName>Other_Skills__c</fullName>
        <label>Other Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Location__c</fullName>
        <label>Preferred Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Skill__c</fullName>
        <label>Primary Skill</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Experience__c</fullName>
        <label>Relevant Experience</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Experience__c</fullName>
        <label>Total Experience</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Consultant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_only_in_alphabets</fullName>
        <active>true</active>
        <description>Name should be only in alphabets</description>
        <errorConditionFormula>NOT(REGEX( Name ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
        <errorMessage>Name should be only in alphabets</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Numbers_in_phone</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
OR( 
LEN( Phone__c ) &lt;= 9 , 
LEN( Phone__c ) &gt;= 13 
), 
NOT( 
OR( 
REGEX(Phone__c, &quot;[0-9 ]+&quot;), 
REGEX(Phone__c, &quot;\\[0-9 ]+&quot;)) 
) 
)</errorConditionFormula>
        <errorMessage>Proper phone no should be inserted</errorMessage>
    </validationRules>
</CustomObject>